--- a/styles/style.css
+++ b/styles/style.css
@@ -14,8 +14,10 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  background-color: #f7f7f7;
   font-family: "Poppins", sans-serif;
   font-size: 16px;
+  color: #212121;
 }
 
 body {
@@ -68,7 +70,7 @@ body {
 }
 
 .form__wrapper form::before {
-  content: '';
+  content: "";
   background: url(../assets/icons/magn_glass.svg);
   background-size: cover;
   position: absolute;
@@ -155,5 +157,52 @@ body {
 
 .down-arrow-icon {
   height: 1.2em;
+}
+
+.pokemon-cards__wrapper {
+  width: 100%;
+  padding: 0.5em;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.5em;
+}
+
+.pokemon-cards__wrapper .pokemon-card {
+  width: 100%;
+  min-width: 0;
+  min-height: 7em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-radius: 0.5em;
+  overflow: hidden;
+}
+
+.pokemon-cards__wrapper .pokemon-card .pokemon-card__header {
+  width: 100%;
+  padding: 0.25em 0.5em 0 0.5em;
+  text-align: right;
+  font-size: 0.5em;
+}
+
+.pokemon-cards__wrapper .pokemon-card .pokemon-card__sprite {
+  width: 100%;
+}
+
+.pokemon-cards__wrapper .pokemon-card .pokemon-card__pokemon-name {
+  height: 1.5em;
+  width: 100%;
+  font-size: .7em;
+  color: white;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
