--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,14 +22,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: $backgroundColor-white-ish;
   font-family: $mainFontPoppins;
   font-size: 16px;
+  color: $darkGrayColor;
 }
 body {
   margin: 1.5em 1em 0 1em;
 }
 
-.flex-vCenter-hCenter{
+.flex-vCenter-hCenter {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,15 +56,14 @@ body {
     position: relative;
     .input-search {
       width: inherit;
-      // text-align: center;
       padding: 0 0 0 2.5em;
       border: none;
       &:focus {
         outline: none;
       }
     }
-    &::before{
-      content: '';
+    &::before {
+      content: "";
       background: url(../assets/icons/magn_glass.svg);
       background-size: cover;
       position: absolute;
@@ -120,3 +121,42 @@ body {
 }
 //=====================================
 //=====================================
+//=====================================
+//=======3. POKEMON CARDS =============
+//=====================================
+
+.pokemon-cards__wrapper {
+  width: 100%;
+  padding: 0.5em;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.5em;
+  .pokemon-card {
+    width: 100%;
+    min-width: 0;
+    min-height: 7em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    // border: 1px solid $ghostColor;
+    border-radius: 0.5em;
+    overflow: hidden;
+    .pokemon-card__header {
+      width: 100%;
+      padding: 0.25em 0.5em 0 0.5em;
+      text-align: right;
+      font-size: 0.5em;
+    }
+    .pokemon-card__sprite {
+      width: 100%;
+    }
+    .pokemon-card__pokemon-name {
+      height: 1.5em;
+      width: 100%;
+      // background-color: $ghostColor;
+      font-size: .7em;
+      color: $whiteColor;
+      text-align: center;
+    }
+  }
+}
