--- a/styles/style.scss
+++ b/styles/style.scss
@@ -58,6 +58,7 @@ body {
       width: inherit;
       padding: 0 0 0 2.5em;
       border: none;
+      text-transform: lowercase;
       &:focus {
         outline: none;
       }
